.gsd.migrating/exec/0075060f-9242-4f2a-8265-bd6b864e0d61.stderr
   Compiling cmt-rs v0.1.0 (/mnt/j/cmt-rs)
error[E0560]: struct `AutoFixConfirmation` has no field named `selection_identielection_identity`
    --> src/services/autofix.rs:1283:13
     |
1283 | ...   sele...entity: p...
     |       ^^^^...^^^^^^ `AutoFixConfirmation` does not have this field
     |
     = note: available fields are: `selection_identity`

For more information about this error, try `rustc --explain E0560`.
error: could not compile `cmt-rs` (bin "cmt-rs" test) due to 1 previous error
